# gram-rs

./: .gitmodules  Cargo.toml  EXAMPLES-UPDATED.md  PHASE4-COMPLETE.md  PHASE7-SUMMARY.md  PYTHON-BINDINGS-SUMMARY.md  README.md  RELATIONSHIP-FUNCTIONS-COMPLETE.md  TODO.md  ZIP-RELATIONSHIPS-ADDED.md
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
benches/src/: lib.rs
crates/gram-codec/: Cargo.toml  Cargo.toml.bak  README.md  pyproject.toml
crates/gram-codec/benches/: codec_benchmarks.rs
crates/gram-codec/src/: ast.rs  error.rs  lib.rs  parser.rs  python.rs  serializer.rs  transform.rs  value.rs  wasm.rs
crates/gram-codec/src/parser/: annotation.rs  combinators.rs  error.rs  mod.rs  node.rs  relationship.rs  subject.rs  types.rs  value.rs
crates/gram-codec/tests/: advanced_features_tests.rs  arrow_style_variants_tests.rs  arrow_types_tests.rs  ast_integration_tests.rs  corpus_integration.rs  edge_cases_tests.rs  parser_tests.rs  relationship_with_edge_identifier_tests.rs  round_trip_tests.rs  serializer_tests.rs  value_types_tests.rs
crates/gram-codec/tests/corpus/: mod.rs  parser.rs  runner.rs  validator.rs
crates/pattern-core/: CHANGELOG.md  Cargo.toml  PYTHON-DEVELOPMENT.md  PYTHON-TYPE-CHECKING.md  pyproject.toml
crates/pattern-ops/: Cargo.toml
crates/pattern-store/: Cargo.toml
crates/pattern-wasm/: Cargo.toml
docs/: gram-notation.md  python-usage.md  rust-usage.md
examples/: README.md  gram-codec-README.md
examples/gram-codec/: basic_usage.rs
examples/gram-codec-python/: README.md  demo.py  example.py  gram_codec.py  quickstart.py
examples/gram-codec-wasm-node/: README.md  index.js  package.json
examples/gram-codec-wasm-web/: README.md  gram_codec_wasm.js  index.html
examples/pattern-core-python/: README.md  advanced.py  basic_usage.py  operations.py  (+2 more)
(+123 files in other folders)
