[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gram-codec"
version = "0.1.0"
description = "Bidirectional codec between Gram notation and Pattern data structures"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
features = ["python"]
module-name = "gram_codec"
python-source = "python"

